Fixed UTF-8 Encoding in Phoenix REMOTE API (fixed imported and reformatted)