@@ -20,229 +20,238 @@ import sagex.phoenix.util.PropertiesUtils;
 
 public class CachedUrl extends Url implements IUrl {
 
-    private static final Logger log             = Logger.getLogger(CachedUrl.class);
+	private static final Logger log = Logger.getLogger(CachedUrl.class);
 
-    private String urlId = null;
-    private File                propFile        = null;
-    private Properties          props           = null;
-    public File                 urlCacheDir     = null;
-    private boolean             followRedirects = false;
-    private UrlConfiguration cfg =new UrlConfiguration();
+	private String urlId = null;
+	private File propFile = null;
+	private Properties props = null;
+	public File urlCacheDir = null;
+	private boolean followRedirects = false;
+	private UrlConfiguration cfg = new UrlConfiguration();
 
-    public CachedUrl(String url) throws IOException {
-        super(url);
+	public CachedUrl(String url) throws IOException {
+		super(url);
 
-        urlId = getCachedFileName(url);
-        propFile = new File(getCacheDir(), urlId + ".properties");
-        props = new Properties();
-        if (propFile.exists()) {
-            log.debug("Reloading existing cached url: " + propFile.getAbsolutePath() + " with id: " + urlId);
-            PropertiesUtils.load(props, propFile);
-            File f = getCachedFile();
-            if (f.exists() && (isExpired(f) || f.length()==0)) {
-                log.info("Removing Cached Url File: " + f);
-                FileUtils.deleteQuietly(f);
-            }
-        } else {
-            File f = propFile.getParentFile();
-            FileUtils.mkdirsQuietly(f);
-            log.debug("Creating a new cached url for: " + url);
-            props.setProperty("url", url);
-            props.setProperty("file", new File(getCacheDir(), urlId + ".cache").getPath());
-        }
+		urlId = getCachedFileName(url);
+		propFile = new File(getCacheDir(), urlId + ".properties");
+		props = new Properties();
+		if (propFile.exists()) {
+			log.debug("Reloading existing cached url: " + propFile.getAbsolutePath() + " with id: " + urlId);
+			PropertiesUtils.load(props, propFile);
+			File f = getCachedFile();
+			if (f.exists() && (isExpired(f) || f.length() == 0)) {
+				log.info("Removing Cached Url File: " + f);
+				FileUtils.deleteQuietly(f);
+			}
+		} else {
+			File f = propFile.getParentFile();
+			FileUtils.mkdirsQuietly(f);
+			log.debug("Creating a new cached url for: " + url);
+			props.setProperty("url", url);
+			props.setProperty("file", new File(getCacheDir(), urlId + ".cache").getPath());
+		}
 
-        // sanity check
-        if (!url.toLowerCase().equals(props.getProperty("url").toLowerCase())) {
-            log.error("The Cached url does not match the one passed! " + props.getProperty("url") + " != " + url + "; Propfile Name: " + propFile);
-            props.setProperty("url", url);
-            File f = getCachedFile();
-            if (f.exists()) {
-                log.info("Removing cached content for url: " + url);
-                if (!f.delete()) {
-                    log.warn("Failed to delete file: " + f);
-                }
-            }
-        }
-    }
+		// sanity check
+		if (!url.toLowerCase().equals(props.getProperty("url").toLowerCase())) {
+			log.error("The Cached url does not match the one passed! " + props.getProperty("url") + " != " + url
+					+ "; Propfile Name: " + propFile);
+			props.setProperty("url", url);
+			File f = getCachedFile();
+			if (f.exists()) {
+				log.info("Removing cached content for url: " + url);
+				if (!f.delete()) {
+					log.warn("Failed to delete file: " + f);
+				}
+			}
+		}
+	}
 
-    private String getCachedFileName(String url) {
-        try {
-            if (url==null) return null;
-            // now uses a simple md5 hash, which should have a fairly low collision rate, especially for our
-            // limited use
-            byte[] key = DigestUtils.md5(url);
-            return new String(Hex.encodeHex(key));
-        } catch (Exception e) {
-            log.error("Failed to create cached filename for url: " + url, e);
-            throw new RuntimeException(e);
-        }
-    }
+	private String getCachedFileName(String url) {
+		try {
+			if (url == null)
+				return null;
+			// now uses a simple md5 hash, which should have a fairly low
+			// collision rate, especially for our
+			// limited use
+			byte[] key = DigestUtils.md5(url);
+			return new String(Hex.encodeHex(key));
+		} catch (Exception e) {
+			log.error("Failed to create cached filename for url: " + url, e);
+			throw new RuntimeException(e);
+		}
+	}
 
-    public boolean isExpired(File cachedFile) {
-        long secs = cfg.getCacheExpiryInSeconds();
-        long diff = (System.currentTimeMillis() - cachedFile.lastModified())/1000;
-        boolean expired = (diff > secs);
-        if (expired) {
-            log.debug("CachedUrl.isExpired(): " + expired + "; File: " + cachedFile + "; LastModified: " + cachedFile.lastModified() + "; Current Time: " + System.currentTimeMillis() + "; Expiry: " + secs + "s; Diff: " + diff + "s");
-        }
-        return expired;
-    }
-    
-    public static boolean isExpired(File cachedFile, long expirySecs) {
-        long diff = (System.currentTimeMillis() - cachedFile.lastModified())/1000;
-        boolean expired = (diff > expirySecs);
-        if (expired) {
-            log.debug("CachedUrl.isExpired(): " + expired + "; File: " + cachedFile + "; LastModified: " + cachedFile.lastModified() + "; Current Time: " + System.currentTimeMillis() + "; Expiry: " + expirySecs + "s; Diff: " + diff + "s");
-        }
-        return expired;
-    }
+	public boolean isExpired(File cachedFile) {
+		long secs = cfg.getCacheExpiryInSeconds();
+		long diff = (System.currentTimeMillis() - cachedFile.lastModified()) / 1000;
+		boolean expired = (diff > secs);
+		if (expired) {
+			log.debug("CachedUrl.isExpired(): " + expired + "; File: " + cachedFile + "; LastModified: "
+					+ cachedFile.lastModified() + "; Current Time: " + System.currentTimeMillis() + "; Expiry: " + secs
+					+ "s; Diff: " + diff + "s");
+		}
+		return expired;
+	}
 
-    private File getCacheDir() {
-        if (urlCacheDir == null) {
-            urlCacheDir = new File(Phoenix.getInstance().getUserCacheDir(), "url");
-            if (!urlCacheDir.exists()) FileUtils.mkdirsQuietly(urlCacheDir);
-        }
-        return urlCacheDir;
-    }
+	public static boolean isExpired(File cachedFile, long expirySecs) {
+		long diff = (System.currentTimeMillis() - cachedFile.lastModified()) / 1000;
+		boolean expired = (diff > expirySecs);
+		if (expired) {
+			log.debug("CachedUrl.isExpired(): " + expired + "; File: " + cachedFile + "; LastModified: "
+					+ cachedFile.lastModified() + "; Current Time: " + System.currentTimeMillis() + "; Expiry: " + expirySecs
+					+ "s; Diff: " + diff + "s");
+		}
+		return expired;
+	}
 
-    public URL getOriginalUrl() throws IOException {
-        return new URL(props.getProperty("url"));
-    }
+	private File getCacheDir() {
+		if (urlCacheDir == null) {
+			urlCacheDir = new File(Phoenix.getInstance().getUserCacheDir(), "url");
+			if (!urlCacheDir.exists())
+				FileUtils.mkdirsQuietly(urlCacheDir);
+		}
+		return urlCacheDir;
+	}
 
-    public File getPropertyFile() {
-        return propFile;
-    }
+	public URL getOriginalUrl() throws IOException {
+		return new URL(props.getProperty("url"));
+	}
 
-    public File getCachedFile() {
-        return getCachedFile(props);
-    }
-    
-    public static File getCachedFile(Properties props) {
-        return new File(props.getProperty("file"));
-    }
+	public File getPropertyFile() {
+		return propFile;
+	}
 
-    @Override
-    public boolean hasMoved() {
-        return Boolean.parseBoolean(props.getProperty("moved", "false"));
-    }
+	public File getCachedFile() {
+		return getCachedFile(props);
+	}
 
-    @Override
-    public URL getMovedUrl() throws IOException {
-        return new URL(props.getProperty("movedUrl"));
-    }
+	public static File getCachedFile(Properties props) {
+		return new File(props.getProperty("file"));
+	}
 
-    @Override
-    public URL getUrl() throws IOException {
-        return getUrl(null);
-    }
+	@Override
+	public boolean hasMoved() {
+		return Boolean.parseBoolean(props.getProperty("moved", "false"));
+	}
 
-    public URL getUrl(ICookieHandler handler) throws IOException {
-        File f = getCachedFile();
-        if (!f.exists() || f.length()==0) {
-            cache(handler);
-        } else {
-            log.debug("Cached File exists: " + f.getAbsolutePath() + " so we'll just use it.");
-        }
-        return f.toURI().toURL();
-    }
+	@Override
+	public URL getMovedUrl() throws IOException {
+		return new URL(props.getProperty("movedUrl"));
+	}
 
-    public void cache(ICookieHandler handler) throws IOException {
-        log.debug("Caching Url: " + getOriginalUrl().toExternalForm());
-        URL u = getOriginalUrl();
-        URLConnection c = UrlUtil.openUrlConnection(u, followRedirects);
-        sendCookies(u, c, handler);
-        if (c instanceof HttpURLConnection) {
-            HttpURLConnection conn = (HttpURLConnection) c;
-            conn.setInstanceFollowRedirects(followRedirects);
-            InputStream is = conn.getInputStream();
-            int rc = conn.getResponseCode();
-            if (rc == HttpURLConnection.HTTP_MOVED_PERM || rc == HttpURLConnection.HTTP_MOVED_TEMP) {
-                props.setProperty("moved", "true");
-                String redirectUrl = conn.getHeaderField("Location");
-                if (redirectUrl != null) {
-                    int p = redirectUrl.indexOf('?');
-                    if (p != -1) {
-                        redirectUrl = redirectUrl.substring(0, p);
-                    }
-                    props.setProperty("movedUrl", redirectUrl);
-                }
-                File f = getCachedFile();
-                FileOutputStream fos = new FileOutputStream(f);
-                IOUtils.copy(is, fos);
-                fos.flush();
-                fos.close();
-                log.debug("Url " + u.toExternalForm() + " Cached To: " + f.getAbsolutePath());
-                log.debug(String.format("Url: %s moved to %s", u.toExternalForm(), redirectUrl));
-            } else if (rc == HttpURLConnection.HTTP_OK) {
-                handleCookies(u, c, handler);
-                File f = getCachedFile();
-                FileOutputStream fos = new FileOutputStream(f);
-                IOUtils.copy(is, fos);
-                fos.flush();
-                fos.close();
-                log.debug("Url " + u.toExternalForm() + " Cached To: " + f.getAbsolutePath());
-            } else {
-                throw new IOException("Http Response Code: " + rc + "; Message: " + conn.getResponseMessage());
-            }
-        } else {
-            // do nothing... we can't cache local urls
-            log.warn("Cannot Cache Url Connection Type; " + c.getClass().getName());
+	@Override
+	public URL getUrl() throws IOException {
+		return getUrl(null);
+	}
 
-        }
-        PropertiesUtils.store(props, getPropertyFile(), "Cached Url Properties");
-        log.debug("Properties for cached url are now stored: " + getPropertyFile().getAbsolutePath());
-    }
+	public URL getUrl(ICookieHandler handler) throws IOException {
+		File f = getCachedFile();
+		if (!f.exists() || f.length() == 0) {
+			cache(handler);
+		} else {
+			log.debug("Cached File exists: " + f.getAbsolutePath() + " so we'll just use it.");
+		}
+		return f.toURI().toURL();
+	}
 
-    @Override
-    public InputStream getInputStream(ICookieHandler handler, boolean followRedirects) throws IOException {
-        this.followRedirects = followRedirects;
+	public void cache(ICookieHandler handler) throws IOException {
+		log.debug("Caching Url: " + getOriginalUrl().toExternalForm());
+		URL u = getOriginalUrl();
+		URLConnection c = UrlUtil.openUrlConnection(u, followRedirects);
+		sendCookies(u, c, handler);
+		if (c instanceof HttpURLConnection) {
+			HttpURLConnection conn = (HttpURLConnection) c;
+			conn.setInstanceFollowRedirects(followRedirects);
+			InputStream is = conn.getInputStream();
+			int rc = conn.getResponseCode();
+			if (rc == HttpURLConnection.HTTP_MOVED_PERM || rc == HttpURLConnection.HTTP_MOVED_TEMP) {
+				props.setProperty("moved", "true");
+				String redirectUrl = conn.getHeaderField("Location");
+				if (redirectUrl != null) {
+					int p = redirectUrl.indexOf('?');
+					if (p != -1) {
+						redirectUrl = redirectUrl.substring(0, p);
+					}
+					props.setProperty("movedUrl", redirectUrl);
+				}
+				File f = getCachedFile();
+				FileOutputStream fos = new FileOutputStream(f);
+				IOUtils.copy(is, fos);
+				fos.flush();
+				fos.close();
+				log.debug("Url " + u.toExternalForm() + " Cached To: " + f.getAbsolutePath());
+				log.debug(String.format("Url: %s moved to %s", u.toExternalForm(), redirectUrl));
+			} else if (rc == HttpURLConnection.HTTP_OK) {
+				handleCookies(u, c, handler);
+				File f = getCachedFile();
+				FileOutputStream fos = new FileOutputStream(f);
+				IOUtils.copy(is, fos);
+				fos.flush();
+				fos.close();
+				log.debug("Url " + u.toExternalForm() + " Cached To: " + f.getAbsolutePath());
+			} else {
+				throw new IOException("Http Response Code: " + rc + "; Message: " + conn.getResponseMessage());
+			}
+		} else {
+			// do nothing... we can't cache local urls
+			log.warn("Cannot Cache Url Connection Type; " + c.getClass().getName());
 
-        URL u = getUrl(handler);
+		}
+		PropertiesUtils.store(props, getPropertyFile(), "Cached Url Properties");
+		log.debug("Properties for cached url are now stored: " + getPropertyFile().getAbsolutePath());
+	}
 
-        return u.openStream();
-    }
+	@Override
+	public InputStream getInputStream(ICookieHandler handler, boolean followRedirects) throws IOException {
+		this.followRedirects = followRedirects;
 
-    /**
-     * Will remove a url from the cache, in the event that url caching is
-     * enabled.
-     * 
-     * @param dataUrl
-     */
-    public static void remove(String dataUrl) {
-        try {
-            CachedUrl cu = new CachedUrl(dataUrl);
-            cu.remove();
-        } catch (IOException e) {
-            log.error("Unabled to remove cached data url: " + dataUrl);
-        }
-    }
+		URL u = getUrl(handler);
 
-    public static void remove(CachedUrl url) {
-    	if (url!=null) {
-    		url.remove();
-    	}
-    }
+		return u.openStream();
+	}
 
-    private void remove() {
-        try {
-            log.debug("Removing Cached Url: " + this.getOriginalUrl().toExternalForm());
-            if (props != null) {
-                // remove the data
-                File f = getCachedFile();
-                if (f.exists()) {
-                    log.debug("Removing Cached File: " + f.getAbsolutePath());
-                    FileUtils.deleteQuietly(f);
-                }
-                
-                // now remove the propfile
-                FileUtils.deleteQuietly(propFile);
-            }
-        } catch (IOException e) {
-        }
-    }
-    
-    @Override
-    public String toString() {
-        return "CachedUrl: " + (props!=null ? props.getProperty("url") : "N/A") + "; UrlId: " + urlId + "; CachedFile: " + propFile;
-    }
+	/**
+	 * Will remove a url from the cache, in the event that url caching is
+	 * enabled.
+	 * 
+	 * @param dataUrl
+	 */
+	public static void remove(String dataUrl) {
+		try {
+			CachedUrl cu = new CachedUrl(dataUrl);
+			cu.remove();
+		} catch (IOException e) {
+			log.error("Unabled to remove cached data url: " + dataUrl);
+		}
+	}
+
+	public static void remove(CachedUrl url) {
+		if (url != null) {
+			url.remove();
+		}
+	}
+
+	private void remove() {
+		try {
+			log.debug("Removing Cached Url: " + this.getOriginalUrl().toExternalForm());
+			if (props != null) {
+				// remove the data
+				File f = getCachedFile();
+				if (f.exists()) {
+					log.debug("Removing Cached File: " + f.getAbsolutePath());
+					FileUtils.deleteQuietly(f);
+				}
+
+				// now remove the propfile
+				FileUtils.deleteQuietly(propFile);
+			}
+		} catch (IOException e) {
+		}
+	}
+
+	@Override
+	public String toString() {
+		return "CachedUrl: " + (props != null ? props.getProperty("url") : "N/A") + "; UrlId: " + urlId + "; CachedFile: "
+				+ propFile;
+	}
 }
